Summary coherent with write-up
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@197 4525493e-7705-40b1-a816-d608a930855b

--- a/summary/summary.bib
+++ b/summary/summary.bib
@@ -534,6 +534,14 @@
   note = "[Online; accessed 24-April-2015]"
 }
 
+@misc{ForumSVN_EWMonoHiggs_2HDM,
+	title = {{SVN repository for Madgraph inputs for 2HDM model leading to a mono-Higgs signature}},
+	howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/EW_Higgs_2HDM/}",
+	year = {2015}, 
+	note = "[Online; accessed 12-May-2015]"
+}
+
+
 @misc{ForumSVN_EWMonoTop,
   title = {{SVN repository for Madgraph inputs for mono-top models}},
   howpublished = "\url{https://svnweb.cern.ch/cern/wsvn/LHCDMF/trunk/models/HF_SingleTop/}",
